--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container">
-        <button id="backButton" onclick="showMenu()">↺</button>
+        <button id="backButton" onclick="showMenu()">Back</button>
         <h1>Horizon Notes</h1>
         <div class="menu" id="menu">
             <button onclick="loadSubject('physics')">Physics</button>
