--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,23 +9,31 @@
     <link id="subjectStyle" rel="stylesheet" href="">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <div class="container">
         <button id="backButton" onclick="showMenu()">Back</button>
         <h1>Horizon Notes</h1>
+        <div id="spinner" class="spinner"></div>
         <div class="menu" id="menu">
             <button onclick="loadSubject('physics')">Physics</button>
             <button onclick="loadSubject('chemistry')">Chemistry</button>
             <button onclick="loadSubject('biology')">Biology</button>
-            <button onclick="loadSubject('maths')">Maths</button>
+            <!-- <button onclick="loadSubject('maths')">Maths</button>
             <button onclick="loadSubject('history_civics')">History & Civics</button>
-            <button onclick="loadSubject('geography')">Geography</button>
+            <button onclick="loadSubject('geography')">Geography</button> -->
             <button onclick="loadSubject('kannada')">Kannada</button>
+
+            <button onclick="loadSubject('computer')">Computer</button>
+            <!-- <button onclick="loadSubject('english')">English</button> -->
+
+
         </div>
         <div id="content">
-            <p>Welcome to the Study App. Select a subject to get started.</p>
+            <p>Welcome to my App. Select a subject to get started.</p>
         </div>
     </div>
     <script src="script.js"></script>
 </body>
+
 </html>
