--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div class="container">
         <button id="backButton" onclick="showMenu()">Back</button>
         <h1>Horizon Notes</h1>
+        <h2 id="by"> - By Pavan</h2>
         <div id="spinner" class="spinner"></div>
         <div class="menu" id="menu">
             <button onclick="loadSubject('physics')">Physics</button>
